Limit WebGL Errors in Console to 10 per context https://bugs.webkit.org/show_bug.cgi?id=79387

Patch by Gregg Tavares <gman@google.com> on 2012-02-24
Reviewed by Kenneth Russell.

Some apps generated enough errors to overload
the Dev Tools so limit the number of errors.
For a correct app there should never be any
errors so seeing the first few should be enough
to debug.

No new tests as no new functionality

* html/canvas/WebGLRenderingContext.cpp:
(WebCore):
(WebCore::WebGLRenderingContextErrorMessageCallback::onErrorMessage):
(WebCore::WebGLRenderingContext::WebGLRenderingContext):
(WebCore::WebGLRenderingContext::initializeNewContext):
(WebCore::WebGLRenderingContext::printGLErrorToConsole):
(WebCore::WebGLRenderingContext::synthesizeGLError):
* html/canvas/WebGLRenderingContext.h:
(WebGLRenderingContext):

Canonical link: https://commits.webkit.org/96635@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108861 268f45cc-cd09-0410-ab3c-d52691b4dbfc