Source/WebCore/html/canvas/WebGLRenderingContext.h
@@ -496,6 +496,7 @@ public:
     bool m_isDepthStencilSupported;
 
     bool m_synthesizedErrorsToConsole;
+    int m_numGLErrorsToConsoleAllowed;
 
     // Enabled extension objects.
     OwnPtr<OESTextureFloat> m_oesTextureFloat;
@@ -621,6 +622,9 @@ public:
 
     // Helper function for texParameterf and texParameteri.
     void texParameter(GC3Denum target, GC3Denum pname, GC3Dfloat parami, GC3Dint paramf, bool isFloat);
+
+    // Helper function to print GL errors to console.
+    void printGLErrorToConsole(const String&);
 
     // Helper function to print warnings to console. Currently
     // used only to warn about use of obsolete functions.
